# orion-ai

./: .gitignore  README.md  SECURITY.md  package-lock.json  package.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: azure-webapps-node.yml  vercel-deploy.yml  vercel-preview.yml  windows-msi-release.yml
app/: globals.css  layout.tsx  page.tsx
app/(app)/: layout.tsx  page.tsx
app/(app)/chat/: page.tsx
app/(app)/files/: page.tsx
app/(app)/focus/: page.tsx
app/(app)/inbox/: page.tsx
app/(app)/learning/: page.tsx
app/(app)/memory/: page.tsx
app/(app)/projects/: page.tsx
app/(app)/search/: page.tsx
app/(app)/settings/: page.tsx
app/(app)/tasks/: page.tsx
app/(app)/today/: page.tsx
app/api/chat/: route.ts
components/chat/: markdown-message.tsx
components/layout/: app-shell.tsx
components/ui/: button.tsx
lib/: mvp-store.ts
lib/ai/: openai-client.ts
lib/db/: supabase-client.ts
scripts/: generate-tauri-config.mjs
services/: ai.service.ts  automation.service.ts  briefing.service.ts  chat.service.ts  file.service.ts  focus.service.ts  inbox.service.ts  learning.service.ts  memory.service.ts  search.service.ts  task.service.ts  voice.service.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
supabase/migrations/: 001_init_schema.sql
tests/: phase4.test.ts  phase5.test.ts  phase6.test.ts  phase7.test.ts  phase8.test.ts
types/: api.ts  automation.ts  chat.ts  feedback.ts  file.ts  focus.ts  inbox.ts  memory.ts  reminder.ts  settings.ts  task.ts  user.ts
(+8 files in other folders)
