[package]
name = "orion-app"
version = "0.1.0"
description = "ORION desktop shell"
authors = ["salil"]
repository = "https://github.com/pallasite99/orion-ai"
edition = "2021"

[lib]
name = "orion_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
